# rzap

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  api_builder.rs  data_type.rs  error.rs  lib.rs
tests/: tests.rs
